--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Rayman244/Tech-Blogger#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
